--- a/src/components/Candidate/Opinion.module.scss
+++ b/src/components/Candidate/Opinion.module.scss
@@ -24,6 +24,11 @@
     right: 0;
     top: 5px;
     font-size: 30px;
+    cursor: pointer;
+    
+    &.voted {
+      color: $blueColor;
+    }
   }
   .counter {
     vertical-align: -3px;
@@ -46,6 +51,12 @@
 
     .overallTitle {
       font-size: 20px;
+    }
+  }
+
+  .userMeta {
+    .educationName {
+      text-transform: lowercase;
     }
   }
 }
