--- a/src/components/Login/index.module.scss
+++ b/src/components/Login/index.module.scss
@@ -23,4 +23,11 @@
   .invitedByText {
     font-weight: bold;
   }
+  .vereficationMessage {
+    margin-bottom: 50px;
+    text-align: left;
+    padding-left: 0;
+    list-style: none;
+    text-align: center;
+  }
 }
