--- a/src/components/Menu/index.module.scss
+++ b/src/components/Menu/index.module.scss
@@ -13,8 +13,20 @@
   padding: 0 50px;
 
   .item {
-    padding: 10px;
-    line-height: 50px;
+    padding: 10px 10px 40px;
     font-size: 20px;
+  }
+
+  .userInfo {
+    font-size: 10px;
+    position: absolute;
+    right: 60px;
+    bottom: 10px;
+  }
+  .notVerified {
+    color: $redColor;
+  }
+  .verified {
+    color: $greenColor;
   }
 }
