--- a/src/index.scss
+++ b/src/index.scss
@@ -24,3 +24,19 @@ body {
 .ghostBtn:hover {
   color: white;
 }
+:global(.ant-modal-title) {
+  text-transform: uppercase;
+  text-align: center;
+}
+:global(.ant-modal-footer) {
+  text-align: center;
+  padding: 20px 0;
+  justify-content: flex-end;
+}
+:global(.ant-modal-body) {
+  text-align: center;
+}
+:global(.ant-form-item-label) {
+  text-align: left;
+  display: block;
+}
