--- a/src/components/Menu/index.module.scss
+++ b/src/components/Menu/index.module.scss
@@ -24,7 +24,7 @@
     bottom: 10px;
   }
   .notVerified {
-    color: $redColor;
+    color: $yellowColor;
   }
   .verified {
     color: $greenColor;
