--- a/src/components/Candidate/index.module.scss
+++ b/src/components/Candidate/index.module.scss
@@ -12,4 +12,26 @@
     font-size: 25px;
     margin-top: 10px;
   }
+  .title {
+    margin-top: 100px;
+    text-transform: uppercase;
+    text-align: center;
+    color: $blackColor;
+    margin-bottom: 50px;
+    position: relative;
+    &:after {
+      content: ' ';
+      border-top: 2px solid $blackColor;
+      width: 100px;
+      display: block;
+      position: absolute;
+      left: 50%;
+      top: -65px;
+      margin-left: -50px;
+    }
+  }
+  .btn {
+    text-align: center;
+    margin-bottom: 50px;
+  }
 }
