--- a/src/index.scss
+++ b/src/index.scss
@@ -40,3 +40,12 @@ body {
   text-align: left;
   display: block;
 }
+:global(.downLink) {
+  font-size: 50px;
+  &:before {
+    content: ''
+  }
+}
+:global(.ant-layout) {
+  background: white;
+}
