--- a/src/components/Menu/index.module.scss
+++ b/src/components/Menu/index.module.scss
@@ -12,6 +12,10 @@
   justify-content: flex-end;
   padding: 0 50px;
 
+  @media(max-width: $deviceWidth) {
+    padding: 0;
+  }
+
   .item {
     padding: 10px 10px 40px;
     font-size: 20px;
@@ -22,6 +26,10 @@
     position: absolute;
     right: 60px;
     bottom: 10px;
+    @media(max-width: $deviceWidth) {
+      right: 10px;
+    }
+
   }
   .notVerified {
     color: $yellowColor;
