--- a/src/components/common/Container/index.module.scss
+++ b/src/components/common/Container/index.module.scss
@@ -1,6 +1,12 @@
+@import '../../../variables.scss';
+
 .container {
   max-width: 1000px;
   margin: 0 auto;
   padding: 30px;
   width: 100%;
+
+  @media(max-width: $deviceWidth) {
+    padding: 20px;
+  }
 }
