--- a/src/components/common/PersonItem/index.module.scss
+++ b/src/components/common/PersonItem/index.module.scss
@@ -6,11 +6,37 @@
   flex-direction: row;
   color: $blackColor;
 
+  @media(max-width: $deviceWidth) {
+    display: block;
+    text-align: center;
+    width: auto;
+  }
+
   .textBlock {
     margin-left: 30px;
+
+    @media(max-width: $deviceWidth) {
+      margin-left: 0;
+      margin-top: 30px;
+    }
   }
   .name {
     color: $blackColor;
     font-size: 30px;
+  }
+  .avatar {
+    width: 200px;
+    height: 200px;
+    line-height: 200px;
+
+    img {
+      object-fit: cover;
+    }
+
+    @media(max-width: $deviceWidth) {
+      width: 100px;
+      height: 100px;
+      line-height: 100px;
+    }
   }
 }
